<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <com.github.florent37.shapeofview.shapes.DiagonalView
            android:layout_width="wrap_content"
            android:layout_height="260dp"
            android:elevation="4dp"
            app:shape_diagonal_angle="10"
            app:shape_diagonal_direction="right"
            app:shape_diagonal_position="bottom">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                />

            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_baseline_thumb_up_24"
                android:layout_gravity="center|top" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Nombre"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="22sp"
                android:layout_marginTop="20dp"/>

        </com.github.florent37.shapeofview.shapes.DiagonalView>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardElevation="8dp"
        android:layout_gravity="top|center"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SingIn"
                android:paddingTop="50dp"
                android:textAlignment="center"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_email_grey"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="5dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Email"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_https_black_24dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="5dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Password"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Login"
                android:background="@color/colorAccent"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="28dp"
                android:layout_marginRight="28dp"/>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/btnLoginGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:paddingBottom="50dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tenescuenta"/>
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Clickacapai"
            android:layout_marginLeft="5dp"
            android:textSize="15sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            />

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>