<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.github.florent37.shapeofview.shapes.DiagonalView
            android:layout_width="wrap_content"
            android:layout_height="260dp"
            android:elevation="4dp"
            app:shape_diagonal_angle="10"
            app:shape_diagonal_direction="right"
            app:shape_diagonal_position="bottom">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Informa"
                android:textColor="@color/colorWhite"
                android:textAlignment="center"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="22dp"
                android:layout_marginBottom="20dp"/>

        </com.github.florent37.shapeofview.shapes.DiagonalView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="80dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_person_pin"
                android:layout_marginTop="15dp"
                android:layout_marginRight="5dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Name"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_phone"
                android:layout_marginTop="15dp"
                android:layout_marginRight="5dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Telephone"
                    android:inputType="numberSigned" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Confirmar"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/colorAccent"
        android:layout_gravity="bottom"
        android:textColor="@color/colorWhite"
        android:layout_margin="20dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_person_grey"
        android:layout_gravity="top|center"
        android:layout_marginTop="140dp"
        app:civ_border_color="#eeeeee"
        app:civ_circle_background_color="@color/colorWhite"
        app:civ_border_width="5dp"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>