<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.UserProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorAccent"
            >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax"
                android:transitionName="@string/transtionname_picture">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/colorBlack" />

                <ImageView
                    android:id="@+id/imageViewCover"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/message_background"
                    android:scaleType="centerCrop"
                    android:alpha="0.8"
                    />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circleImageProfile"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:src="@drawable/ic_person"
                    app:civ_circle_background_color="@color/colorGrayLight"
                    android:layout_marginTop="100dp"
                    app:civ_border_color="@color/colorWhite"
                    app:civ_border_width="5dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="bottom"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textViewUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Name"
                        android:textColor="@color/colorDarkBlue"
                        android:textStyle="bold"
                        android:textSize="20dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginRight="15dp"
                            android:layout_marginTop="5dp"
                            android:layout_gravity="center|left"
                            android:gravity="center">

                            <TextView
                                android:id="@+id/textViewPostNumber"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/n0"
                                android:textColor="@color/colorBlack"
                                android:textStyle="bold"
                                android:textSize="15dp" />

                            <TextView
                                android:layout_width="75dp"
                                android:layout_height="wrap_content"
                                android:text="@string/Post"
                                android:textColor="@color/colorBlack"
                                android:textStyle="bold"
                                android:gravity="center"
                                android:textSize="13dp" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginTop="5dp"
                            android:layout_gravity="center"
                            android:gravity="center">

                            <TextView
                                android:id="@+id/followers"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/n0"
                                android:textColor="@color/colorBlack"
                                android:textSize="15dp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="75dp"
                                android:layout_height="wrap_content"
                                android:text="@string/Followers"
                                android:textColor="@color/colorBlack"
                                android:textStyle="bold"
                                android:gravity="center"
                                android:textSize="13dp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="5dp"
                            android:layout_gravity="center|right"
                            android:gravity="center">

                            <TextView
                                android:id="@+id/following"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/n0"
                                android:textColor="@color/colorBlack"
                                android:textStyle="bold"
                                android:textSize="15dp" />

                            <TextView
                                android:layout_width="75dp"
                                android:layout_height="wrap_content"
                                android:text="@string/Telephone"
                                android:textColor="@color/colorBlack"
                                android:textStyle="bold"
                                android:gravity="center"
                                android:textSize="13dp" />


                        </LinearLayout>

                    </LinearLayout>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="80dp"
                        android:layout_marginRight="80dp"
                        android:id="@+id/edit_profile"
                        android:text="Follow"
                        android:background="@color/colorAccent"
                        android:textColor="@color/colorWhite"/>
                </LinearLayout>


            </FrameLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewPostExist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NoPost"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="18dp"
                android:textStyle="normal" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewMyPost"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_chat"
        android:layout_gravity="bottom|right"
        android:layout_margin="15dp"
        />


</androidx.coordinatorlayout.widget.CoordinatorLayout>